--- a/src/Components/Sub Components/Messages/Messages.css
+++ b/src/Components/Sub Components/Messages/Messages.css
@@ -2,6 +2,10 @@
   overflow-y: hidden;
 }
 
+.react-scroll-to-bottom--css-qyfry-1n7m0yu {
+  padding-top: 10px;
+}
+
 .messagesContainer {
   overflow-x: auto;
   margin-top: 20px;
